 + Feature addition or improvement.
 - Feature or option removal.
 % Development flag or note, such as branching.


Pretty URLs 0.8.4                                                    ??
================================================================================
 ! Base: Replace cached URLs in 2.0. (QueryString.php)
 % Base: Now compatible with TinyPortal 1.0.5.

Pretty URLs 0.8.3                                                    9 May, 2008
================================================================================
 ! Boards/Topics: $_GET['pretty'] needs to be unset with the new SEO changes in SMF 2. (QueryString.php)
 ! Boards/Topics: Fix $_REQUEST for silly mods that don't check $board/$topic. (Display.php, MessageIndex.php, QueryString.php)
 % Base: Updated for SMF 2.0 Beta 3.1 Public.

Pretty URLs 0.8.2                                                  9 April, 2008
================================================================================
 % Branched off 0.8 so that changes for 2.0 support won't get confused with everything else.
 ! Base: Some colour changes were needed for dark themes. (chrome.css)
 - Base: Removed the cache table's log_time column as it's not used anymore.
 ! Base: Some futher changes for 2.0 Beta 3 support were required.

Pretty URLs 0.8.1                                                 22 March, 2008
================================================================================
 + Base: Added a hidden tool to edit the filters array at sa=filters. (PrettyUrls.php, Subs-PrettyUrls.php, PrettyURls.template.php)
 ! Base: Added a place for notices to be displayed in the admin interface. (PrettyUrls.php, PrettyUrls.template.php)
 ! Base: Started polishing it up a little.
 % Base: Updated for SMF 2.0 Beta 3! (Though it's not all right for SQLite yet. And I haven't tested PostgreSQL yet at all!)

Pretty URLs 0.8                                                    7 March, 2008