@@ -14,6 +14,7 @@ Pretty URLs 0.8.4                                                    ??
 ================================================================================
  ! Base: Replace cached URLs in 2.0. (QueryString.php)
  % Base: Now compatible with TinyPortal 1.0.5.
+ ! Topics: Topics about unions are now fine. (PrettyUrls-Filters.php)
 
 Pretty URLs 0.8.3                                                    9 May, 2008
 ================================================================================
